--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Challenge</title>
 </head>
 <body>
-    
+    <h1>My First Java Script Challenge</h1>
+
+    <script src="VeryEasy/veryEasy.js"></script>
+    <script src="Easy/Easy.js"></script>
+    <script src="Medium/Medium.js"></script>
+    <script src="Hard/Hard.js"></script>
+    <script src="VeryHard/veryHard.js"></script>
 </body>
 </html>
