--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
     <title>JS Challenge</title>
 </head>
 <body>
     <h1>My First Java Script Challenge</h1>
+    <div class="calc-grid">
+        <div class="output"></div>
+            <div class="prev operand"></div>
+                <div class="current operand"></div>
+    </div>
+    <button class="span-two">AC</button>
+    <button>DEL</button>
+    <button data-operation>÷</button>
+    <button data-number>1</button>
+    <button data-number>2</button>
+    <button data-number>3</button>
+    <button data-operation>*</button>
+    <button data-number>4</button>
+    <button data-number>5</button>
+    <button data-number>6</button>
+    <button data-operation>+</button>
+    <button data-number>7</button>
+    <button data-number>8</button>
+    <button data-number>9</button>
+    <button data-operation>-</button>
+    <button data-number>.</button>
+    <button data-number>0</button>
+    <button data-equals class="span-two">=</button>
 
     <script src="VeryEasy/veryEasy.js"></script>
     <script src="Easy/Easy.js"></script>
